Renamed TeamEntity due to conflicts with formula1 #589